File browser behavior is inconsistent between append and open #44243

Closed
opened 2015-04-03 01:50:18 +02:00 by gandalf3 · 8 comments
Member

System Information
Archlinux

Blender Version
Broken: 2.74

Short description of error

The file browser doesn't behave the same between opening and appending when using tab completion.

Open behavior:
examp147.gif

Append behavior:
examp148.gif

It seems you need to click on the gifs to see them animated.

Exact steps for others to reproduce the error

  1. Press Ctrl O/Shift F1
  2. Note that when opening the file bar is pre-filled with the name of the first file (?). Append doesn't do this.
  3. Type in the first few characters of a file and press Tab, then enter. Open works as expected, but append doesn't select the file and throws an error instead of entering the .blend.
**System Information** Archlinux **Blender Version** Broken: 2.74 **Short description of error** The file browser doesn't behave the same between opening and appending when using tab completion. Open behavior: ![examp147.gif](https://archive.blender.org/developer/F157587/examp147.gif) Append behavior: ![examp148.gif](https://archive.blender.org/developer/F157589/examp148.gif) *It seems you need to click on the gifs to see them animated.* **Exact steps for others to reproduce the error** 1. Press Ctrl O/Shift F1 2. Note that when opening the file bar is pre-filled with the name of the first file (?). Append doesn't do this. 3. Type in the first few characters of a file and press Tab, then enter. Open works as expected, but append doesn't select the file and throws an error instead of entering the .blend.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @mont29

Added subscriber: @mont29

Issue is not exactly what you report here - but there is still an issue. ;)

In fact, in 'append' mode, blend file should not autocomplete in 'file' area, but in 'directory' one, since you do not append a .blend file, but one of its items…

Will see what happens here.

Issue is not exactly what you report here - but there is still an issue. ;) In fact, in 'append' mode, blend file should not autocomplete in 'file' area, but in 'directory' one, since you do not append a .blend file, but one of its items… Will see what happens here.
Bastien Montagne self-assigned this 2015-04-03 10:17:06 +02:00

Note: switched to TODO, because I would rather not solve that in current master code. there are many issues with completion in those two fields, will solve a few of them in master.

Ongoing work on assets involves a deep rewrite of that editor, so will address remaining problems in that branch (https://developer.blender.org/diffusion/B/browse/asset-experiments/) - current code is doing some rather bad things anyway...

Note: switched to TODO, because I would rather not solve that in current master code. there are many issues with completion in those two fields, will solve a few of them in master. Ongoing work on assets involves a deep rewrite of that editor, so will address remaining problems in that branch (https://developer.blender.org/diffusion/B/browse/asset-experiments/) - current code is doing some rather bad things anyway...

This issue was referenced by b444887054

This issue was referenced by b444887054297d83c560e860219a5c598d390935

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b444887054.

Closed by commit b444887054.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44243
No description provided.